--- a/timesheet_server/package.json
+++ b/timesheet_server/package.json
@@ -15,6 +15,7 @@
     "@server": "dist/Server"
   },
   "dependencies": {
+    "@types/cors": "^2.8.6",
     "@types/mongoose": "^5.7.8",
     "command-line-args": "^5.1.1",
     "cookie-parser": "^1.4.5",
