--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "~1.3.13",
+    "@devexpress/dx-react-core": "^2.6.3",
+    "@devexpress/dx-react-scheduler": "^2.6.3",
+    "@devexpress/dx-react-scheduler-material-ui": "^2.6.3",
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
